# spank-plugins

demo/qrmi/jobs/: run_sampler.sh
demo/qrun/jobs/: conf
plugins/spank_ibm_qrmi/: CMakeLists.txt  spank_ibm_qrmi.c
plugins/spank_qrmi/: Cargo.toml  proxy.json
plugins/spank_qrmi/src/: lib.rs
plugins/spank_qrmi/src/proxy/: auth.rs  handler.rs  mod.rs  models.rs
plugins/spank_qrmi/src/proxy/models/: proxy_config.rs  proxy_runtime_config.rs
qrmi/: Cargo.toml  README.md  pyproject.toml
qrmi/dependencies/direct_access_client/: README.md
qrmi/dependencies/pasqal_cloud_client/: README.md
qrmi/examples/pulser_backend/pasqal/: pulser_backend.py  target.py
qrmi/examples/qiskit_primitives/ibm/: README.md  estimator.py  requirements.txt  sampler.py
qrmi/examples/qiskit_primitives/pasqal/: README.md  requirements.txt  sampler.py  target.py
qrmi/examples/qrmi/c/direct_access/: README.md
qrmi/examples/qrmi/c/pasqal_cloud/: README.md
qrmi/examples/qrmi/c/qiskit_runtime_service/: README.md
qrmi/examples/qrmi/python/: requirements.txt
qrmi/examples/qrmi/python/direct_access/: README.md
qrmi/examples/qrmi/python/qiskit_runtime_service/: README.md
qrmi/examples/qrmi/rust/direct_access/: README.md
qrmi/examples/qrmi/rust/pasqal_cloud/: README.md
qrmi/examples/qrmi/rust/qiskit_runtime_service/: README.md
qrmi/python/qiskit_qrmi/qiskit_qrmi_primitives/ibm/: estimator.py  sampler.py
qrmi/python/qiskit_qrmi/tools/task_runner/: main.py
qrmi/python/qrmi/primitives/pasqal/: target.py
qrmi/src/: lib.rs  pyext.rs
