[package]
name = "spank-qrmi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
eyre = "0.6.8"
libc = "0.2.172"
slurm-spank = "0.4"
tracing = "0.1.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrmi = { path = "../../qrmi" }
anyhow = "1.0.98"
log = "0.4.27"
axum = "0.8.4"
http = "1.3.1"
reqwest = "0.12.12"
clap = "4.5.38"
tokio = "1.45.0"
hyper-util = "0.1.12"
hyper = "1.6.0"
url = "2.5.4"
hyper-tls = "0.6.0"
env_logger = "0.11.8"
