[package]
name = "spank-qrmi"
version = "0.4.1"
edition = "2021"
license = "GPL-3.0"
description = "SPANK Plugin for Quantum Resource Management Interface(QRMI)"
keywords = [
    "quantum-computing",
    "slurm",
    "slurm-job-scheduler",
    "slurm-workload-manager",
    "plugins",
    "spank",
    "rust"
]
readme = "README.md"
repository = "https://github.com/qiskit-community/spank-plugins"
authors = ["IBM Quantum <qiskit@us.ibm.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
eyre = "0.6.8"
libc = "0.2.172"
slurm-spank = "0.4"
tracing = "0.1.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrmi = { path = "../../qrmi" }
once_cell = "1.21.3"
anyhow = "1.0.98"
log = "0.4.27"
axum = "0.8.4"
http = "1.3.1"
reqwest = "0.12.12"
clap = "4.5.38"
tokio = "1.45.0"
hyper-util = "0.1.12"
hyper = "1.6.0"
url = "2.5.4"
hyper-tls = "0.6.0"
env_logger = "0.11.8"
